# Copyright (C) 2010 Guy Cole <gsc@digiburo.com>
#  
# This file is free software; as a special exception the author gives
# unlimited permission to copy and/or distribute it, with or without 
# modifications, as long as this notice is preserved.
# 
# This program is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY, to the extent permitted by law; without even the
# implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.

EXTRA_DIST = bc_atis.sh bc_aviation.sh bc_clear.sh bc_limit.sh bc_ping.sh \
  bc_rr.sh bc_trunk1.sh bc_trunk2.sh bc_wx.sh \
  pcr_atis.sh pcr_off.sh
